--- a/vagrantfile
+++ b/vagrantfile
@@ -171,7 +171,7 @@ Vagrant.configure(VAGRANT_FILE_API_VERSION) do |config|
     run_octopus_scenario(config, 'Server_Scenario_07_Reinstall')
 
     # upgrade to the latest
-    run_octopus_scenario(config, 'Server_Scenario_08_Upgrade', { "-ApiKey" => "$ENV:OctopusApiKey" })
+    run_octopus_scenario(config, 'Server_Scenario_08_Upgrade')
 
     # install watchdog
     run_octopus_scenario(config, 'Server_Scenario_09_Watchdog_Create')
