--- a/vagrantfile
+++ b/vagrantfile
@@ -28,7 +28,7 @@ def publish_logs(config, scenario, log_files)
       winrm.source = source
       winrm.destination = "logs/#{scenario}-#{dest}"
     end
-    config.vm.provision "shell", inline: "write-output \"##teamcity[publishArtifact '#{Dir.pwd}/logs/#{scenario}-#{dest}']\""
+    config.vm.provision "shell", inline: "write-output \"##teamcity[publishArtifacts 'logs/#{scenario}-#{dest}']\""
   end
 end
 
