--- a/vagrantfile
+++ b/vagrantfile
@@ -165,7 +165,8 @@ Vagrant.configure(VAGRANT_FILE_API_VERSION) do |config|
     run_octopus_scenario(config,
       'Server_Scenario_01_Install',
       ['C:/ChezOctopus/Logs/OctopusServer.txt',
-       'C:/Octopus/OctopusServer-OctopusServer.config'])
+       'C:/Octopus/OctopusServer-OctopusServer.config',
+       'C:/Program Files/Octopus Deploy/Octopus/Octopus.Server.exe.nlog'])
 
     # Run DSC to install second HA node
     run_octopus_scenario(config,
