Fix up pester invocation

--- a/vagrantfile
+++ b/vagrantfile
@@ -35,7 +35,7 @@ $run_test_scenario_script = <<SCRIPT
   $configuration.TestResult.OutputFormat = 'NUnitXml'
   $configuration.Run.PassThru = $true
 
-  Invoke-Pester Spec/{scenario_name}_spec.ps1 -configuration $configuration
+  Invoke-Pester -path "Spec/{scenario_name}_spec.ps1" -configuration $configuration
 
   write-output "##teamcity[blockClosed name='Testing Scenario {scenario_name}']"
   exit $LASTEXITCODE
