Fix up call to publish log for tentacle test results

--- a/vagrantfile
+++ b/vagrantfile
@@ -282,7 +282,7 @@ Vagrant.configure(VAGRANT_FILE_API_VERSION) do |config|
     config.vm.provision "shell", inline: "& c:\\temp\\Tests\\register-polling-tentacle.ps1; exit $LASTEXITCODE"
     config.vm.provision "shell", inline: "& c:\\temp\\Tests\\trigger-and-wait-for-healthcheck.ps1; exit $LASTEXITCODE"
     config.vm.provision "shell", inline: $run_test_scenario_script.gsub('{scenario_name}', 'tentacle_scenario_01_install')
-    publish_log(config, scenario, "c:/temp/tests/PesterTestResults_tentacle_scenario_01_install.xml")
+    publish_log(config, 'Tentacle_Scenario_01_Install', "c:/temp/tests/PesterTestResults_tentacle_scenario_01_install.xml")
 
     # uninstall tentacle
     run_tentacle_scenario(config,
@@ -295,7 +295,7 @@ Vagrant.configure(VAGRANT_FILE_API_VERSION) do |config|
        'C:/Octopus/OctopusServer-OctopusServer.config'])
     config.vm.provision "shell", inline: "& c:\\temp\\Tests\\trigger-and-wait-for-healthcheck.ps1; exit $LASTEXITCODE"
     config.vm.provision "shell", inline: $run_test_scenario_script.gsub('{scenario_name}', 'tentacle_scenario_02_remove')
-    publish_log(config, scenario, "c:/temp/tests/PesterTestResults_tentacle_scenario_02_remove.xml")
+    publish_log(config, 'Tentacle_Scenario_02_Remove', "c:/temp/tests/PesterTestResults_tentacle_scenario_02_remove.xml")
 
     # Install old version
     run_tentacle_scenario(config,
@@ -310,7 +310,7 @@ Vagrant.configure(VAGRANT_FILE_API_VERSION) do |config|
        'C:/Octopus/OctopusTentacleHome/Tentacle/Tentacle.config'])
     config.vm.provision "shell", inline: "& c:\\temp\\Tests\\trigger-and-wait-for-healthcheck.ps1; exit $LASTEXITCODE"
     config.vm.provision "shell", inline: $run_test_scenario_script.gsub('{scenario_name}', 'tentacle_scenario_03_reinstall')
-    publish_log(config, scenario, "c:/temp/tests/PesterTestResults_tentacle_scenario_03_reinstall.xml")
+    publish_log(config, 'Tentacle_Scenario_03_Reinstall', "c:/temp/tests/PesterTestResults_tentacle_scenario_03_reinstall.xml")
 
     # Upgrade it
     run_tentacle_scenario(config,
@@ -325,7 +325,7 @@ Vagrant.configure(VAGRANT_FILE_API_VERSION) do |config|
        'C:/Octopus/OctopusTentacleHome/Tentacle/Tentacle.config'])
     config.vm.provision "shell", inline: "& c:\\temp\\Tests\\trigger-and-wait-for-healthcheck.ps1; exit $LASTEXITCODE"
     config.vm.provision "shell", inline: $run_test_scenario_script.gsub('{scenario_name}', 'tentacle_scenario_04_upgrade')
-    publish_log(config, scenario, "c:/temp/tests/PesterTestResults_tentacle_scenario_04_upgrade.xml")
+    publish_log(config, 'Tentacle_Scenario_04_Upgrade', "c:/temp/tests/PesterTestResults_tentacle_scenario_04_upgrade.xml")
 
     # install watchdog
     run_tentacle_scenario(config,
@@ -353,7 +353,7 @@ Vagrant.configure(VAGRANT_FILE_API_VERSION) do |config|
        'C:/Octopus/OctopusTentacleHome/Logs/OctopusTentacle.txt',
        'C:/Octopus/OctopusTentacleHome/Tentacle/Tentacle.config'])
     config.vm.provision "shell", inline: $run_test_scenario_script.gsub('{scenario_name}', 'tentacle_scenario_06_watchdog_delete')
-    publish_log(config, scenario, "c:/temp/tests/PesterTestResults_tentacle_scenario_06_watchdog_delete.xml")
+    publish_log(config, 'Tentacle_Scenario_06_Watchdog_Delete', "c:/temp/tests/PesterTestResults_tentacle_scenario_06_watchdog_delete.xml")
 
     # remove in preparation for testing comms port
     run_tentacle_scenario(config,
@@ -367,7 +367,7 @@ Vagrant.configure(VAGRANT_FILE_API_VERSION) do |config|
        'C:/Octopus/OctopusTentacleHome/Logs/OctopusTentacle.txt',
        'C:/Octopus/OctopusTentacleHome/Tentacle/Tentacle.config'])
     config.vm.provision "shell", inline: $run_test_scenario_script.gsub('{scenario_name}', 'tentacle_scenario_07_remove')
-    publish_log(config, scenario, "c:/temp/tests/PesterTestResults_tentacle_scenario_07_remove.xml")
+    publish_log(config, 'Tentacle_Scenario_07_Remove', "c:/temp/tests/PesterTestResults_tentacle_scenario_07_remove.xml")
 
     # tentacle comms port
     run_tentacle_scenario(config,
@@ -381,6 +381,6 @@ Vagrant.configure(VAGRANT_FILE_API_VERSION) do |config|
        'C:/Octopus/OctopusTentacleHome/Logs/OctopusTentacle.txt',
        'C:/Octopus/OctopusTentacleHome/Tentacle/Tentacle.config'])
     config.vm.provision "shell", inline: $run_test_scenario_script.gsub('{scenario_name}', 'tentacle_scenario_08_tentacle_comms_port')
-    publish_log(config, scenario, "c:/temp/tests/PesterTestResults_tentacle_scenario_08_tentacle_comms_port.xml")
+    publish_log(config, 'Tentacle_Scenario_08_Tentacle_Comms_Port', "c:/temp/tests/PesterTestResults_tentacle_scenario_08_tentacle_comms_port.xml")
   end
 end
